﻿v9.5
-----
+ Added the amount of items sold in the last 24 hours to the market listing pages
+ Added a store page link to badge progress pages
+ Added price history support for Chrono.gg, Dreamgame, and Savemi stores
: Fixed a bug which caused some users "Sell" buttons to disappear when selecting items in inventory
: Fixed a bug that caused video resolution selection feature to be hidden
: Fixed a bug where package info buttons were malformed
: Fixed a bug that caused the "Get Help" buttons not to direct users to the correct support website
: Fixed a bug that caused "Not Interested" highlighting not to work correctly on activity pages
: Fixed a bug that caused Twitch streaming info not to display on profiles without a showcase activated
- Removed market relisting function, as this is no longer supported by Valve
- Removed support for Coinplay.io in price comparisons 


v9.4
-----
+ Added the ability to create custom user-configurable profile links
: Updated the visual style of app page elements to more closely match Valve's new style
: Fixed a bug that caused some market items not to display features correctly in user's inventories
: Fixed a bug that caused market sorting options to disappear when paginating
: Updated wishlist emptying feature to work with larger wishlists and be more robust in general
: Fixed a timing issue when leaving multiple groups at once
: Fixed a bug that caused downloadable content details not to display properly on store pages
- Removed Empty Cart feature as this feature is now part of Steam and is therefore redundant
- Removed functions related to Steam Greenlight

v9.3
-----
+ Added the ability to sort wishlists by review scores, which will display the highest rated items first
+ Added some behind the scenes updates to OpenCritic reviews, should now display correctly on all pages
+ Added DRM warnings, price history information, and SteamDB links to bundle pages